--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -19,6 +19,11 @@ jobs:
     runs-on: macos-latest
     
     steps:
+    - name: Setup Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '16.4'
+
     - name: Checkout Code
       uses: actions/checkout@v4
       
@@ -164,7 +169,7 @@ jobs:
     name: Upload to TestFlight
     needs: build
     runs-on: macos-latest
-    #if: github.event_name == 'workflow_dispatch' && github.event.inputs.upload_to_testflight == 'true'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.upload_to_testflight == 'true'
     
     steps:
     - name: Download IPA Artifact
