--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -181,7 +181,7 @@ jobs:
     name: Upload to TestFlight
     needs: build
     runs-on: macos-latest
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.upload_to_testflight == 'true'
+    # if: github.event_name == 'workflow_dispatch' && github.event.inputs.upload_to_testflight == 'true'
     
     steps:
     - name: Download IPA Artifact
