--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_card_swiper: ^7.0.2
+  flutter_launcher_icons: ^0.14.4
   flutter_local_notifications: ^19.0.0
   flutter_localization: ^0.3.2
   flutter_localizations:
@@ -77,6 +78,13 @@ flutter_native_splash:
   android_12:
     color: "#ffffff"
     image: ./assets/splash-screen.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
