--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   in_app_review: ^2.0.10
   intro_slider: ^4.2.1
   path: ^1.9.1
+  intl: any
   path_provider: ^2.1.5
   pointycastle: ^4.0.0
   riverpod_annotation: ^2.6.1
@@ -95,6 +96,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/soft_skills.csv
